--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,11 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>0.11.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
