moved ehcache configuration to programmatic cache factory

--- a/site01/example.yml
+++ b/site01/example.yml
@@ -1,5 +1,11 @@
 images: /Users/massimiliano.gerardi/dart/images/Trudgeon/50to98
-host: http://localhost/images/Trudgeon
+searchFolder: /Users/massimiliano.gerardi/dart/images/Trudgeon/50to98
+site: site01
+
+# cache configuration
+cacheFolder: /Users/massimiliano.gerardi/dart/ehcache/site01
+# cache names separated by pipe |
+cacheNames: interestPoints|colorImage
 
 
 # HTTP-specific options.
