--- a/site01/example.yml
+++ b/site01/example.yml
@@ -3,7 +3,7 @@ searchFolder: /Users/massimiliano.gerardi/dart/images/Trudgeon/50to98
 site: site01
 
 # cache configuration
-cacheFolder: /Users/massimiliano.gerardi/dart/ehcache/site01
+cacheFolder: site01
 # cache names separated by pipe |
 cacheNames: interestPoints|colorImage
 
